--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -7,7 +7,7 @@ $headings: (
   'h2': (
     'size': 6.25rem, // 100px
     'line-height': 1.5, // 192px
-    'font-family': 'Didot Bold',
+    'font-family': 'didot Regular',
   ),
   'h3': (
     'size': 3.75rem, // 60px
